# BehaveMAE_reconstruction

./: .gitignore  README.md  engine_pretrain.py  hbehavemae_debug.py  hbehavemae_nodj.py  main.py  main_pretrain.py  minimal_reconstruction.py  pyproject.toml  runai_submit.py  uv.toml
datasets/: ofd_mouse.py  pose_traj_dataset.py  reconstruct_data.py
docs/: README.md  data_propagation_guide.md  demo_data_propagation.py  quick_reference.md  tensor_shapes_detailed.md  visual_data_flow.md
models/: hbehave_mae.py
