[project]
name = "behavemae-reconstruction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.11"
dependencies = [
    "fsspec>=2025.10.0",
    "huggingface-hub>=1.3.5",
    "iopath>=0.1.10",
    "ipykernel>=6.31.0",
    "networkx>=3.2.1",
    "numpy==1.26.4",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "pyyaml>=6.0.3",
    "requests>=2.28.1",
    "safetensors>=0.7.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "tensorboard>=2.20.0",
    "timm==1.0.8",
    "torch==2.0.1",
    "torchaudio>=2.0.2",
    "torchvision==0.15.2",
    "tqdm>=4.67.1",
    "wandb>=0.24.0",
]
